--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       </nav>
 
       <section class="header-container">
-        <h1>Hello, I'm Aryan</h1>
+        <h1>Hello, I'm Nandini Kumari</h1>
         <div class="content-text">
           <h2>Software Developer</h2>
           <p>
@@ -74,12 +74,12 @@
 
     <footer id="footer">
       <div class="container">
-        <a href="mailto:aryan.12221652@lpu.in">aryan.12221652@lpu.in</a>
+        <a href="mailto:nandini.12221652@lpu.in">nandini.12221652@lpu.in</a>
         <div class="social">
           <a href="#" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
           <a href="#" target="_blank"><img src="./assets/linkedin-icon.svg" alt="LinkedIn" /></a>
         </div>
-	<p>Copyright &copy; Aryan <span id="datee"></span>, All rights reserved</p>
+	<p>Copyright &copy; Nandini <span id="datee"></span>, All rights reserved</p>
       </div>
     </footer>
     <script src="js/script.js"></script>
